--- a/src/global.less
+++ b/src/global.less
@@ -5,3 +5,18 @@ body {
 #root {
   max-width: 768px;
 }
+
+.adm-nav-bar {
+  --height: 45px;
+  --border-bottom: none;
+  display: flex;
+  align-items: center;
+  height: var(--height);
+  border-bottom: var(--border-bottom);
+  padding: 0 12px;
+  white-space: nowrap;
+  position: sticky;
+  top: 0;
+  background: #f5f5f9;
+  z-index: 999;
+}
