--- a/src/components/Message/index.less
+++ b/src/components/Message/index.less
@@ -55,7 +55,7 @@
     li.other {
       text-align: left;
       overflow: hidden;
-      // margin-left: -41px;
+      margin-left: -41px;
       span {
         float: left;
         margin-top: 7px;
