--- a/src/components/Chat/index.less
+++ b/src/components/Chat/index.less
@@ -1,7 +1,14 @@
-.message {
-  //   background: #b5ffb47a;
+.body {
   height: 100%;
-  min-height: 90vh;
+  max-width: 768px;
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  background: #eeeeee94;
+  height: 100%;
+  overflow-y: scroll;
 }
 .footer {
   width: 100%;
