--- a/src/components/Message/index.less
+++ b/src/components/Message/index.less
@@ -3,6 +3,8 @@
   padding: 0 10px;
   ul {
     width: 100%;
+    list-style-type: none;
+    display: unset;
     li {
       // padding: 2px 40px;
       span {
@@ -17,7 +19,7 @@
         line-height: 30px;
         max-width: 56%;
         display: inline-block;
-        border-radius: 10px;
+        border-radius: 15px;
         padding: 6px 10px;
         margin-top: 10px;
         text-align: left;
@@ -47,6 +49,7 @@
         margin-right: 10px;
         background: #1e90ff;
         color: #fff;
+        border-top-right-radius: 3px;
       }
       p.name {
         right: 14px;
@@ -55,7 +58,7 @@
     li.other {
       text-align: left;
       overflow: hidden;
-      margin-left: -41px;
+      // margin-left: -40px;
       span {
         float: left;
         margin-top: 7px;
@@ -64,6 +67,7 @@
         margin-left: 10px;
         background: #fff;
         color: #000;
+        border-top-left-radius: 3px;
       }
       p.name {
         left: 14px;
