--- a/src/components/Chat/index.less
+++ b/src/components/Chat/index.less
@@ -8,7 +8,7 @@
 .message {
   background: #eeeeee94;
   height: 100%;
-  overflow-y: scroll;
+  // overflow-y: scroll;
 }
 .footer {
   width: 100%;
