--- a/src/global.less
+++ b/src/global.less
@@ -6,6 +6,11 @@ body {
   max-width: 768px;
   height: 100%;
 }
+// ul左边padding-inline-start: 40px; 多出宽度和高度
+* {
+  margin: 0;
+  padding: 0;
+}
 
 .adm-nav-bar {
   --height: 45px;
