消息列表最多截取最近100条消息

--- a/src/components/Message/index.less
+++ b/src/components/Message/index.less
@@ -1,7 +1,10 @@
 .chat {
   cursor: pointer;
   padding: 0 10px;
+  overflow-y: scroll;
+  height: 100%;
   ul {
+    height: 100%;
     width: 100%;
     list-style-type: none;
     display: unset;
