非等高元素无限滚动加载

--- a/src/components/MessageVirtualized/index.less
+++ b/src/components/MessageVirtualized/index.less
@@ -24,7 +24,7 @@
         border-radius: 15px;
         padding: 6px 10px;
         margin-top: 0px;
-        margin-bottom: 0px;
+        margin-bottom: 10px;
         text-align: left;
         word-break: break-all;
       }
@@ -43,7 +43,7 @@
     }
     li.me {
       text-align: right;
-      overflow: hidden;
+      // overflow: hidden;
       span {
         float: right;
         margin-top: 7px;
@@ -60,7 +60,7 @@
     }
     li.other {
       text-align: left;
-      overflow: hidden;
+      // overflow: hidden;
       // margin-left: -40px;
       span {
         float: left;
