新增图床接口，支持发送图片

--- a/src/components/Message/index.less
+++ b/src/components/Message/index.less
@@ -20,7 +20,7 @@
       p.message {
         min-height: 25px;
         line-height: 30px;
-        max-width: 56%;
+        max-width: 75%;
         display: inline-block;
         border-radius: 15px;
         padding: 6px 10px;
@@ -32,6 +32,12 @@
         color: #666;
         font-size: 14px;
         position: relative;
+      }
+      div.img {
+        padding: 6px 10px;
+        max-width: 80%;
+        display: inline-block;
+        margin-bottom: 1em;
       }
     }
     li.time {
