--- a/src/components/Chat/index.less
+++ b/src/components/Chat/index.less
@@ -15,4 +15,31 @@
   max-width: 768px;
   position: sticky;
   bottom: 0px;
+  .plus {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+}
+
+.popup {
+  padding: 20px;
+  background: #eeeeee;
+  height: 35vh;
+  .f_img {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    .icon {
+      padding: 0 15px;
+      background: #fff;
+      border-radius: 10px;
+      height: 65px;
+      display: flex;
+      align-items: center;
+    }
+    span {
+      margin-top: 5px;
+    }
+  }
 }
