--- a/src/global.less
+++ b/src/global.less
@@ -26,3 +26,10 @@ body {
   background: #f5f5f9;
   z-index: 999;
 }
+
+:root:root {
+  --adm-color-primary: #76c6b8;
+  --adm-font-family: -apple-system, blinkmacsystemfont, 'Helvetica Neue',
+    helvetica, segoe ui, arial, roboto, 'PingFang SC', 'miui',
+    'Hiragino Sans GB', 'Microsoft Yahei', sans-serif;
+}
