--- a/src/layouts/Index/index.less
+++ b/src/layouts/Index/index.less
@@ -11,9 +11,9 @@
 
 .body {
   flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
 }
 
 .bottom {
