--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,7 +1,14 @@
 .main {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  background-color: #87c4ba2b;
+  .user {
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
