--- a/src/layouts/Index/index.less
+++ b/src/layouts/Index/index.less
@@ -11,12 +11,15 @@
 
 .body {
   flex: 1;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  padding-bottom: 50px;
 }
 
 .bottom {
-  flex: 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  // flex: 0 1;
   border-top: solid 1px var(--adm-color-border);
+  background: #ffffff78;
+  backdrop-filter: blur(5px);
 }
