更新上传图片接口与页面

--- a/src/components/Message/index.less
+++ b/src/components/Message/index.less
@@ -37,11 +37,9 @@
         }
       }
       .img {
-        display: inline-block;
-        padding: 6px 10px;
+        float: right;
         max-width: 80%;
         max-height: 300px;
-        margin-bottom: 1em;
       }
     }
   }
