更新提示音、更新表情弹窗

--- a/src/components/Message/index.less
+++ b/src/components/Message/index.less
@@ -10,12 +10,13 @@
   .item {
     display: flex;
     // box-sizing: border-box;
-    margin: 0 10px 4px;
+    margin: 8px;
     .avatar {
       // margin: 0 12px;
     }
     .msg_body {
       .nickname {
+        margin-bottom: 4px;
         span {
           color: #555;
           font-size: 14px;
